# medical-ai-midterm-project

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
src/: config.py  dataset.py  evaluate.py  gradcam.py  model.py  predict.py  preprocess.py  train.py
